--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <!-- 英雄區塊 -->
         <section id="hero" class="hero-section">
             <div class="hero-content">
-                <h1>[請填寫你的名字]</h1>
-                <p>[請填寫你的學校與科系]</p>
+                <h1>林柏璋 IAN</h1>
+                <p>國立台北科技大學 資訊與財金管理系</p>
             </div>
         </section>
 
