--- a/index.html
+++ b/index.html
@@ -1,79 +1,93 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[IAN] - 個人介紹</title>
-    
-    <!-- 引入 Google Fonts -->
+    <title>林柏璋 IAN - 全端網頁開發者</title>
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
-    <!-- 連結外部 CSS 樣式表 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <!-- 導覽列 -->
-    <header class="navbar">
+    <header>
         <nav>
+            <div class="logo">個人網站</div>
             <ul>
                 <li><a href="#about">關於我</a></li>
-                <li><a href="#projects">專案</a></li>
-                <li><a href="#contact">聯絡</a></li>
+                <li><a href="#projects">專案作品</a></li>
+                <li><a href="#contact">聯絡方式</a></li>
             </ul>
+            <button id="theme-toggle">切換模式</button>
         </nav>
     </header>
 
     <main>
-        <!-- 英雄區塊 -->
-        <section id="hero" class="hero-section">
+        <section id="hero">
             <div class="hero-content">
                 <h1>林柏璋 IAN</h1>
                 <p>國立台北科技大學 資訊與財金管理系</p>
+                <a href="#projects" class="cta-button">查看我的作品</a>
             </div>
         </section>
 
-        <!-- 關於我 -->
-        <section id="about" class="content-section">
+        <section id="about">
             <h2>關於我</h2>
-            <p>
-                你好！我是一位充滿熱情的前端開發者，專注於打造使用者友善且高效能的網頁應用。我擅長使用 HTML, CSS 和 JavaScript，並且對於學習新技術抱有極大的熱忱。我相信好的設計不僅是美觀，更是流暢與直觀的使用者體驗。
-            </p>
+            <p>你好！我是一位經驗豐富的全端開發者，專注於 JavaScript 技術棧，包括 React、Node.js 和 Vue。我致力於撰寫乾淨、可維護的程式碼，並對資訊安全與使用者體驗有著高度的熱情。</p>
         </section>
 
-        <!-- 專案 -->
-        <section id="projects" class="content-section">
-            <h2>專案</h2>
-            <div class="project-container">
+        <section id="projects">
+            <h2>專案作品</h2>
+            <div class="project-grid">
                 <div class="project-card">
-                    <h3>專案一：響應式部落格網站</h3>
-                    <p>這是一個使用 HTML5 和 CSS Grid 打造的現代部落格平台，在不同尺寸的裝置上都能提供最佳瀏覽體驗。</p>
+                    <h3>專案一：電商平台</h3>
+                    <p>使用 MERN 技術棧打造的全功能電商網站，具備會員系統、購物車與金流串接。</p>
                 </div>
                 <div class="project-card">
-                    <h3>專案二：互動式待辦事項應用</h3>
-                    <p>透過原生 JavaScript 實現的單頁應用程式，允許使用者新增、刪除和標記完成任務，所有資料都儲存在瀏覽器的 Local Storage 中。</p>
+                    <h3>專案二：互動式數據儀表板</h3>
+                    <p>使用 D3.js 和 React 實現的數據視覺化儀表板，提供即時的數據分析與互動圖表。</p>
+                </div>
+                <div class="project-card">
+                    <h3>專案三：個人部落格</h3>
+                    <p>透過 Next.js 與 Markdown 建立的靜態生成部落格，載入速度極快且利於 SEO。</p>
                 </div>
             </div>
         </section>
 
-        <!-- 聯絡方式 -->
-        <section id="contact" class="content-section">
+        <section id="contact">
             <h2>聯絡方式</h2>
-            <p>如果您對我的專案感興趣，或是有任何合作機會，歡迎隨時與我聯繫！</p>
-            <a href="mailto:[請填寫你的Email]" class="contact-button">寄送 Email</a>
+            <p>期待與您合作！歡迎透過以下方式與我聯繫：</p>
+            <div class="contact-links">
+                <a href="mailto:your-email@example.com">
+                    <i class="fas fa-envelope"></i> your-email@example.com
+                </a>
+                <a href="https://github.com/username" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://linkedin.com/in/username" target="_blank">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+            </div>
         </section>
     </main>
 
-    <!-- 頁尾 -->
-    <footer class="footer">
-        <div class="social-links">
-            <a href="https://github.com" target="_blank" rel="noopener noreferrer">GitHub</a>
-            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    <footer>
+        <p>&copy; 2025 林柏璋 IAN. All Rights Reserved.</p>
+        <div class="social-icons">
+            <a href="https://github.com/username" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/username" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p>&copy; 2025 [請填寫你的名字]. All Rights Reserved.</p>
     </footer>
 
+    <!-- Custom JS -->
+    <script src="script.js"></script>
 </body>
 </html>
