--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             <h2>聯絡方式</h2>
             <p>期待與您合作！歡迎透過以下方式與我聯繫：</p>
             <div class="contact-links">
-                <a href="mailto:brianlin@gmail.com">
+                <a href="ian.12.31.patience@gmail.com">
                     <i class="fas fa-envelope"></i> brianlin@gmail.com
                 </a>
-                <a href="https://github.com/brianlin0212" target="_blank">
+                <a href="https://https://github.com/Ian931231" target="_blank">
                     <i class="fab fa-github"></i> GitHub
                 </a>
-                <a href="https://linkedin.com/in/username" target="_blank">
+                <a href="https://www.linkedin.com/in/柏璋-林-a320b336a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
             </div>
