--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <footer>
         <p>&copy; 2025 林柏璋 IAN. Designed with passion.</p>
         <div class="social-icons">
-            <a href="https://github.com/brianlin0212" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://https://github.com/Ian931231" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/柏璋-林-a320b336a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
 
