--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>林柏璋 IAN - 網頁開發作品集</title>
-    <meta name="description" content="林柏璋 (IAN) 的個人作品集網站，展示其在網頁開發、UI/UX 設計與資訊財金領域的專業技能。">
-
-    <!-- Google Fonts -->
+    <title>林柏璋 | 個人網站</title>
+    
+    <!-- Google Fonts: Poppins for a modern look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome CDN -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Font Awesome CDN for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom CSS -->
@@ -21,83 +20,81 @@
 
     <header>
         <nav>
-            <a href="#" class="logo">IAN LIN</a>
+            <a href="#" class="logo">MyPortfolio</a>
             <ul>
                 <li><a href="#about">關於我</a></li>
-                <li><a href="#projects">專案作品</a></li>
-                <li><a href="#contact">聯絡方式</a></li>
+                <li><a href="#projects">專案</a></li>
+                <li><a href="#contact">聯絡</a></li>
             </ul>
-            <button id="theme-toggle" aria-label="切換色彩模式">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-moon"></i>
-            </button>
+            <button id="theme-toggle">切換模式</button>
         </nav>
     </header>
 
     <main>
+        <!-- Hero Section -->
         <section id="hero">
             <div class="hero-content">
-                <h1 class="hero-title">林柏璋 IAN</h1>
-                <p class="hero-subtitle">國立台北科技大學 資訊與財金管理系</p>
-                <a href="#projects" class="cta-button">查看我的作品</a>
+                <h1>林柏璋</h1>
+                <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
             </div>
         </section>
 
-        <section id="about">
+        <!-- About Section -->
+        <section id="about" class="fade-in">
             <h2>關於我</h2>
-            <p>你好！我是一位對解決問題充滿熱情的開發者，專注於打造兼具卓越使用者體驗與穩固後端架構的網頁應用。我擅長運用 JavaScript 生態系，包含 React、Node.js，並持續探索新技術，致力於將冰冷的程式碼轉化為富有溫度的互動體驗。</p>
+            <p>在瓦羅蘭特當任瓦學弟。</p>
         </section>
 
-        <section id="projects">
-            <h2>專案作品</h2>
+        <!-- Projects Section -->
+        <section id="projects" class="fade-in">
+            <h2>我的專案</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <div class="card-content">
-                        <h3>專案一：電商平台</h3>
-                        <p>使用 MERN 技術棧打造的全功能電商網站，具備會員系統、購物車與金流串接。</p>
-                    </div>
+                    <img src="https://via.placeholder.com/400x250/1A202C/FFFFFF?text=Project+Alpha" alt="專案一截圖">
+                    <h3>專案一：校園社團管理系統</h3>
+                    <p>使用 Python Django 框架開發的社團管理平台，提供活動發布、成員管理與線上報名功能，簡化社團行政流程。</p>
+                    <a href="#" class="btn" target="_blank">查看專案</a>
                 </div>
                 <div class="project-card">
-                    <div class="card-content">
-                        <h3>專案二：互動式數據儀表板</h3>
-                        <p>使用 D3.js 和 React 實現的數據視覺化儀表板，提供即時的數據分析與互動圖表。</p>
-                    </div>
+                    <img src="https://via.placeholder.com/400x250/1A202C/FFFFFF?text=Project+Beta" alt="專案二截圖">
+                    <h3>專案二：個人理財儀表板</h3>
+                    <p>結合 FinTech 概念，使用 React 與 Chart.js 打造的個人化理財儀表板，幫助使用者追蹤與分析個人收支狀況。</p>
+                    <a href="#" class="btn" target="_blank">查看專案</a>
                 </div>
                 <div class="project-card">
-                    <div class="card-content">
-                        <h3>專案三：個人部落格</h3>
-                        <p>透過 Next.js 與 Markdown 建立的靜態生成部落格，載入速度極快且利於 SEO。</p>
-                    </div>
+                    <img src="https://via.placeholder.com/400x250/1A202C/FFFFFF?text=Project+Gamma" alt="專案三截圖">
+                    <h3>專案三：網頁版貪食蛇遊戲</h3>
+                    <p>運用原生 JavaScript 與 HTML5 Canvas 實現的經典貪食蛇遊戲，旨在練習 DOM 操作與遊戲邏輯設計。</p>
+                    <a href="#" class="btn" target="_blank">查看專案</a>
                 </div>
             </div>
         </section>
 
-        <section id="contact">
-            <h2>聯絡方式</h2>
-            <p>期待與您合作！歡迎透過以下方式與我聯繫：</p>
+        <!-- Contact Section -->
+        <section id="contact" class="fade-in">
+            <h2>聯絡我</h2>
+            <p>如果您對我的作品感興趣或有合作機會，歡迎隨時與我聯繫！</p>
             <div class="contact-links">
-                <a href="ian.12.31.patience@gmail.com">
-                    <i class="fas fa-envelope"></i> brianlin@gmail.com
-                </a>
-                <a href="https://https://github.com/Ian931231" target="_blank">
-                    <i class="fab fa-github"></i> GitHub
-                </a>
-                <a href="https://www.linkedin.com/in/柏璋-林-a320b336a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">
-                    <i class="fab fa-linkedin"></i> LinkedIn
+                <a href="mailto:ian.12.31.patience@gmail.com">
+                    <i class="fas fa-envelope"></i> ian.12.31.patience@gmail.com
                 </a>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 林柏璋 IAN. Designed with passion.</p>
-        <div class="social-icons">
-            <a href="https://https://github.com/Ian931231" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/柏璋-林-a320b336a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <div class="social-links">
+            <a href="https://github.com/Ian931231" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/IanLin1231" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
         </div>
+        <p>&copy; 2025 林柏璋. All Rights Reserved.</p>
     </footer>
 
-    <!-- Custom JS -->
+    <!-- Custom JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
