--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>林柏璋 | 個人網站</title>
+    <title>林柏璋 IAN| 個人網站</title>
     
     <!-- Google Fonts: Poppins for a modern look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,11 @@
                 <li><a href="#projects">專案</a></li>
                 <li><a href="#contact">聯絡</a></li>
             </ul>
-            <button id="theme-toggle">切換模式</button>
+            <!-- 更新：模式切換按鈕使用圖示 -->
+            <button id="theme-toggle" aria-label="切換色彩模式">
+                <i class="fas fa-moon"></i>
+                <i class="fas fa-sun"></i>
+            </button>
         </nav>
     </header>
 
