--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <footer>
         <div class="social-links">
-            <a href="https://github.com/Ian931231" target="_blank" aria-label="GitHub">
+            <a href="https://github.com/IAN40070510" target="_blank" aria-label="GitHub">
                 <i class="fab fa-github"></i>
             </a>
             <a href="https://www.linkedin.com/in/IanLin1231" target="_blank" aria-label="LinkedIn">
