--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>我的專案</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/400x250/1A202C/FFFFFF?text=Project+Alpha" alt="專案一截圖">
+                    <img src="lovepik-background-material-for-science-and-technology-image_500480720.jpg" alt="專案一截圖">
                     <h3>專案一：校園社團管理系統</h3>
                     <p>使用 Python Django 框架開發的社團管理平台，提供活動發布、成員管理與線上報名功能，簡化社團行政流程。</p>
                     <a href="#" class="btn" target="_blank">查看專案</a>
