--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <!-- 更新：將 Logo 文字更改為指定名稱 -->
-            <a href="#" class="logo">林柏璋 IAN</a>
+            <a href="#" class="logo">IAN</a>
             <ul>
                 <li><a href="#about">關於我</a></li>
                 <li><a href="#projects">專案</a></li>
@@ -39,6 +39,7 @@
         <!-- Hero Section -->
         <section id="hero">
             <div class="hero-content">
+                <img src="lovepik-background-material-for-science-and-technology-image_500480720.jpg" alt="專案一截圖">
                 <h1>林柏璋</h1>
                 <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
             </div>
