--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
     <header>
         <nav>
-            <!-- 更新：將 Logo 文字更改為指定名稱 -->
             <a href="#" class="logo">IAN</a>
             <ul>
                 <li><a href="#about">關於我</a></li>
-                <li><a href="#projects">專案</a></li>
+                <!-- <li><a href="#projects">專案</a></li> -->
+                <li><a href="#competitions">比賽經歷</a></li>
+                <li><a href="#licenses">證照</a></li>
                 <li><a href="#contact">聯絡</a></li>
             </ul>
-            <!-- 模式切換按鈕使用太陽與月亮圖示 -->
             <button id="theme-toggle" aria-label="切換色彩模式">
                 <i class="fas fa-moon"></i>
                 <i class="fas fa-sun"></i>
@@ -39,9 +39,13 @@
         <!-- Hero Section -->
         <section id="hero">
             <div class="hero-content">
-                <img src="lovepik-background-material-for-science-and-technology-image_500480720.jpg" alt="專案一截圖">
-                <h1>林柏璋</h1>
-                <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
+                <!-- 文字內容 -->
+                <div class="hero-text">
+                    <h1>林柏璋</h1>
+                    <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
+                </div>
+                <!-- 圖片 -->
+                <img src="lovepik-background-material-for-science-and-technology-image_500480720.jpg" alt="個人照片" class="hero-image">
             </div>
         </section>
 
@@ -51,7 +55,8 @@
             <p>在瓦羅蘭特當任瓦學弟。</p>
         </section>
 
-        <!-- Projects Section -->
+        <!-- 
+        Projects Section - 此區塊已被註解，日後可移除註解來啟用
         <section id="projects" class="fade-in">
             <h2>我的專案</h2>
             <div class="project-grid">
@@ -72,6 +77,55 @@
                     <h3>專案三：網頁版貪食蛇遊戲</h3>
                     <p>運用原生 JavaScript 與 HTML5 Canvas 實現的經典貪食蛇遊戲，旨在練習 DOM 操作與遊戲邏輯設計。</p>
                     <a href="#" class="btn" target="_blank">查看專案</a>
+                </div>
+            </div>
+        </section>
+        -->
+        
+        <!-- Competitions Section -->
+        <section id="competitions" class="fade-in">
+            <h2>比賽經歷</h2>
+            <div class="list-container">
+                <div class="list-item">
+                    <h3>第28屆TDK盃全國大專校院創思設計與製作競賽</h3>
+                    <p>遙控組 競賽獎第四名、創意獎佳作、工作團隊紀律獎</p>
+                </div>
+                <div class="list-item">
+                    <h3>第四屆安全達人養成計劃 暨資安戰士挑戰賽</h3>
+                    <p>校園學生組 Desktop場 亞軍</p>
+                </div>
+                <div class="list-item">
+                    <h3>第四屆安全達人養成計劃 暨資安戰士挑戰賽</h3>
+                    <p>校園學生組 Mobile場 第六名</p>
+                </div>
+                <div class="list-item">
+                    <h3>第18屆電腦鼠暨智慧輪型機器人競賽</h3>
+                    <p>高中職組 線迷宮鼠競賽 第六名</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Licenses Section -->
+        <section id="licenses" class="fade-in">
+            <h2>相關證照</h2>
+            <div class="list-container">
+                <div class="list-item">
+                    <h3>NVIDIA 开发基于提示工程的大语言模型（LLM）应用</h3>
+                </div>
+                <div class="list-item">
+                    <h3>NVIDIA 深度學習基礎理論與實踐</h3>
+                </div>
+                <div class="list-item">
+                    <h3>IPAS 資訊安全工程師 初級</h3>
+                </div>
+                <div class="list-item">
+                    <h3>電腦硬體裝修乙級</h3>
+                </div>
+                <div class="list-item">
+                    <h3>工業電子丙級</h3>
+                </div>
+                <div class="list-item">
+                    <h3>網路架設丙級</h3>
                 </div>
             </div>
         </section>
