--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
                 </div>
                 <!-- 圖片 -->
-                <img src="lovepik-background-material-for-science-and-technology-image_500480720.jpg" alt="個人照片" class="hero-image">
+                <img src="me.jpg" alt="個人照片" class="hero-image">
             </div>
         </section>
 
@@ -157,4 +157,5 @@
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
