--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
                 </div>
                 <!-- 圖片 -->
-                <img src="me.jpg" alt="個人照片" class="hero-image">
+                <img src="Me.jpg" alt="個人照片" class="hero-image">
             </div>
         </section>
 
