--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- 文字內容 -->
                 <div class="hero-text">
                     <h1>林柏璋</h1>
-                    <p class="subtitle">國立台北科技大學 資訊與財金管理系</p>
+                    <p class="subtitle">國立臺北科技大學 資訊與財金管理系</p>
                 </div>
                 <!-- 圖片 -->
                 <img src="Me.jpg" alt="個人照片" class="hero-image">
