--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
         <!-- About Section -->
         <section id="about" class="fade-in">
             <h2>關於我</h2>
-            <p>在瓦羅蘭特當任瓦學弟。</p>
+            <p>我專注於程式開發、人工智慧應用與資安實作，具備跨資訊管理與技術的實務經驗。
+                曾參與 HITCON 2025 及 NVIDIA GTC Taipei at COMPUTEX 等專業社群活動，持續關注最新攻防技術與AI應用安全議題。
+                
+                專業技能
+                人工智慧與大語言模型開發：熟悉提示工程（Prompt Engineering）、NVIDIA深度學習平台應用。
+                資訊安全與系統防護：具備IPAS資訊安全工程師認證，擅長弱點分析、滲透測試與系統強化。
+                嵌入式與網路系統整合：具備工業電子、網路架設與硬體維修能力，可進行完整軟硬體系統設計。
+                我致力於將理論與實作結合，期望在AI與資安領域中成為能解決實際問題的工程師。</p>
         </section>
 
         <!-- 
