--- a/index.html
+++ b/index.html
@@ -59,21 +59,16 @@
             <p>我專注於程式開發、人工智慧應用與資安實作，具備跨資訊管理與技術的實務經驗。曾參與 HITCON 2025 及 NVIDIA GTC Taipei at COMPUTEX 等專業社群活動，持續關注最新攻防技術與
                 AI 應用安全議題。</p>
 
-            <h2>關於我</h2>
-            <p>我專注於程式開發、人工智慧應用與資安實作，具備跨資訊管理與技術的實務經驗。曾參與 HITCON 2025 及 NVIDIA GTC Taipei at COMPUTEX 等專業社群活動，持續關注最新攻防技術與
-                AI 應用安全議題。</p>
-
-            <h3>專業技能</h3>
-            <p>
+            <h3 class="skills-title">專業技能</h3>
+            <p class="skills">
                 <strong>人工智慧與大語言模型開發：</strong>熟悉提示工程（Prompt Engineering）及 NVIDIA 深度學習平台應用。<br>
                 <strong>資訊安全與系統防護：</strong>具備 IPAS 資訊安全工程師認證，擅長弱點分析、滲透測試與系統強化。<br>
                 <strong>嵌入式與網路系統整合：</strong>具備工業電子、網路架設與硬體維修能力，可進行完整軟硬體系統設計。
             </p>
 
             <p>我致力於將理論與實作結合，期望在 AI 與資安領域中成為能解決實際問題的工程師。</p>
-
-
         </section>
+
 
         <!-- 
         Projects Section - 此區塊已被註解，日後可移除註解來啟用
